--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
 
 <body class="dark bg-gray-900">
     <div class="h-screen flex items-center justify-center">
-        <form class="max-w-sm mx-auto border border-gray-400 rounded p-5" method="post" action="/" enctype="multipart/form-data">
+        <form class="max-w-sm mx-auto border border-gray-400 rounded p-5" method="post" action="/"
+            enctype="multipart/form-data">
             <h1 class="text-xl font-semibold text-gray-900 dark:text-white mb-10">Calculate accuracy score</h1>
             <div class="mb-5">
                 <label for="file_input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Upload
@@ -26,25 +27,29 @@
                 <select id="test_select"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     name="testsize">
+                    <option value="0.2">20%</option>
                     <option value="0.4">40%</option>
                     <option value="0.5">50%</option>
-                    <option value="0.8">80%</option>
                 </select>
             </div>
             {% if score %}
             <div class="mb-5">
                 <span class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Accuracy score</span>
-                <span 
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                {{ score }}
+                <span
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    {{ score }}
                 </span>
             </div>
-            <div class="flex justify-end ">
-                <button type="submit" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-gray-600 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Volver</button>
+            <div class="flex justify-end">
+                <button type="submit"
+                    class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-gray-600 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Back</button>
             </div>
             {% else %}
-            <div class="flex justify-end ">
-                <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Calcular</button>
+            <div class="flex justify-end gap-2">
+                <a href="settings"
+                    class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-gray-600 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Settings</a>
+                <button type="submit"
+                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Calculate</button>
             </div>
             {% endif %}
         </form>
